--- a/css/styles.css
+++ b/css/styles.css
@@ -68,18 +68,28 @@
   display: flex;
   flex-direction: column;
   flex: 10 1 auto;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 .componentsrow{
   /* background-color: #0F00FF; */
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-
 }
+@media screen and (max-width: 768px) {
+  .componentsrow{
+    /* background-color: #0F00FF; */
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+  }
+}
+
 .component{
   /* background-color: #0F00FF; */
   display: flex;
-  flex: 20 1 auto;
+  flex: 30 1 auto;
   align-items: center;
   justify-content: center;
   justify-items: center;
@@ -89,7 +99,7 @@
 .innerComponent{
   /* background-color: #0F55FF; */
   display: flex;
-  flex: 1 1 auto;
+  flex: 10 1 auto;
   align-items: center;
   justify-content: center;
   justify-items: center;
