--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,12 @@
   background-color: gray;
   overflow-x: scroll;
   overflow-y: scroll;
+  animation: fadeInModal 1s;
+  z-index: 100;
+}
+.modalClose{
+  animation: fadeOutModal 1s forwards;
+  display: none;
 }
 .modal #title{
   font-size: calc(10px + 2vw);
@@ -121,6 +127,17 @@
     z-index: -1;
   }
 }
+@keyframes fadeInModal {
+  0% { 
+    opacity: 0; 
+    transform: scale(0);
+  }
+  100% { 
+    opacity: 1; 
+    color :black;
+    margin: -10px;
+  }
+}
 @keyframes fadeOut {
   0% { 
     opacity: 1; 
@@ -130,6 +147,16 @@
   100% { 
     transform: scale(0);
     background-color: red;
+  }
+}
+@keyframes fadeOutModal {
+  0% { 
+    opacity: 1; 
+    color :black;
+  }
+  100% { 
+    transform: scale(0);
+    opacity: 0;
   }
 }
 @keyframes shrink {
@@ -147,6 +174,7 @@
   padding-left: 3%;
   padding-right: 3%;
   padding-bottom: 3%;
+  
 }
 .iconWithDataDescription{
   background-color: aqua;
@@ -169,4 +197,167 @@
 }
 .shrinkBackDown{
   animation: shrink 1s;
+}
+.componentContainer{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  display: flex;
+  flex: 10 1 auto;
+  flex-direction: column;
+}
+@keyframes applyGrad {
+  0% { 
+    background-color: white;
+  }
+  20% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.2) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(255, 126, 95,0.2) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.2) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(117, 84, 76, 0.2) 100%);
+  }
+  40% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.4) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(255, 126, 95,0.4) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.4) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76, 0.4) 100%);
+  }
+  60% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.6) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(255, 126, 95,0.6) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.6) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76,0.6) 100%);
+  }
+  80% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.8) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(255, 126, 95,0.8) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.8) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76,0.8) 100%);
+  }
+  100% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 1) 0%,
+    rgba(255, 126, 95, 0.1) 10%, 
+    rgba(254, 180, 123, 0.1) 90%, 
+    rgba(255, 126, 95,1) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 1) 0%,
+    rgba(255, 126, 95, 0.1) 10%, 
+    rgba(254, 180, 123, 0.1) 90%, 
+    rgba(117, 84, 76,1) 100%);
+  }
+}
+
+
+@keyframes removeGrad {
+  0% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 1) 0%,
+    rgba(255, 126, 95, 0.1) 10%, 
+    rgba(254, 180, 123, 0.1) 90%, 
+    rgba(255, 126, 95,1) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 1) 0%,
+    rgba(255, 126, 95, 0.1) 10%, 
+    rgba(254, 180, 123, 0.1) 90%, 
+    rgba(117, 84, 76,1) 100%);
+  }
+
+  20% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.8) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(255, 126, 95,0.8) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.8) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76,0.8) 100%);
+  }
+  40% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.6) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(255, 126, 95,0.6) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.6) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76,0.6) 100%);
+  }
+
+  60% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.4) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(255, 126, 95,0.4) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.4) 0%,
+    rgba(255, 126, 95, 0) 10%, 
+    rgba(254, 180, 123, 0) 90%, 
+    rgba(117, 84, 76, 0.4) 100%);
+  }
+  80% { 
+    background: linear-gradient(to right, 
+    rgba(255, 126, 95, 0.2) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(255, 126, 95,0.2) 100%),
+    linear-gradient(to bottom, 
+    rgba(255, 126, 95, 0.2) 0%,
+    rgba(255, 126, 95, 0.0) 10%, 
+    rgba(254, 180, 123, 0.0) 90%, 
+    rgba(117, 84, 76, 0.2) 100%);
+  }
+
+  
+  100% { 
+    background-color: white;
+  }
+}
+.componentContainer:hover{
+  flex: 1 1 auto;
+  animation: applyGrad 0.3s;
+}
+.hoveredComponent{
+  background: linear-gradient(to right, 
+  rgba(255, 126, 95, 1) 0%,
+  rgba(255, 126, 95, 0.1) 10%, 
+  rgba(254, 180, 123, 0.1) 90%, 
+  rgba(255, 126, 95,1) 100%),
+  linear-gradient(to bottom, 
+  rgba(255, 126, 95, 1) 0%,
+  rgba(255, 126, 95, 0.1) 10%, 
+  rgba(254, 180, 123, 0.1) 90%, 
+  rgba(117, 84, 76,1) 100%);
+}
+.componentContainerRemoveAnim{
+  animation: removeGrad 0.3s;
 }
